<resources>
    <string name="app_name">Dunia Laundry</string>
    <string name="laundry_servies">Laundry Service</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="cancelorder">Batalkan Order</string>
    <string name="please_wait">Tunggu sebentar</string>
    <string name="permission_pick_rationale">Membutuhkan izin akses READ_EXTERNAL_STORAGE untuk memilih gambar.</string>
    <string name="permission_crop_rationale">Membutuhkan izin akses WRITE_EXTERNAL_STORAGE untuk menyimpan gambar.</string>
    <string name="button_allow">Mengizinkan</string>
    <string name="button_deny">Menolak</string>
    <string name="action_camera">Kamera</string>
    <string name="action_gallery">Galeri</string>
    <string name="fit_image">FIT Gambar</string>
    <string name="square">Kotak</string>
    <string name="free">Bebas</string>
    <string name="circle">Bulat</string>
    <string name="save">Simpan</string>
    <string name="skip">Lewati</string>
    <string name="intro_1">intro_1</string>
    <string name="heading_2">heading_2</string>
    <string name="intro_2">intro_2</string>
    <string name="heading_3">heading_3</string>
    <string name="intro_3">intro_3</string>
    <string name="close_msg">Apakah anda yakin akan menutup aplikasi?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="fname">Nama Lengkap</string>
    <string name="send">Kirim</string>
    <string name="sendc">Kirim</string>
    <string name="pnumber">Nomor Telepon</string>
    <string name="val_email">Tolong masukan id email.</string>
    <string name="val_num">Tolong masukan nomor telepon</string>
    <string name="val_name">Tolong masukan nama.</string>
    <string name="val_pdate">Tolong masukan tanggal penjemputan</string>
    <string name="val_ptime">Tolong masukan waktu penjemputan</string>
    <string name="val_ddate">Tolong masukan tanggal pengantaran</string>
    <string name="val_dtime">Tolong masukan waktu pengantaran</string>
    <string name="val_Item">Tolong pilih layanan untuk melanjutkan</string>
    <string name="val_pass">Kata sandi minimal 6 karakter.</string>
    <string name="pass_notmatch">Kata sandi harus sama</string>
    <string name="internet_concation">Tolong aktifkan internet.</string>
    <string name="email">Email</string>
    <string name="home">Beranda</string>
    <string name="nearby">Sekitar Saya</string>
    <string name="profile">Profil</string>
    <string name="loginc">LOGIN</string>
    <string name="login">Login</string>
    <string name="already">Sudah memiliki akun?</string>
    <string name="signupC">Daftar</string>
    <string name="signup">Daftar</string>
    <string name="wlcome">Selamat datang kembali</string>
    <string name="password">Kata Sandi</string>
    <string name="booking">Pemesanan</string>
    <string name="cpassword">Ulang kata sandi</string>
    <string name="forgetpassword">Lupa kata sandi</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="fill_your_email">Masukan email yang telah terhubung dengan akun anda</string>
    <string name="dont_have_an_account">Tidak memiliki akun?</string>
    <string name="have_a_promo">Memiliki kode promo?</string>
    <string name="enter_a_promo">Masukan kode promo</string>
    <string name="applied_code">Kode yang diterapkan</string>
    <string name="addDate">Tambah tanggal &amp; Waktu</string>
    <string name="enterdeliverytime">Masukan waktu pengantaran</string>
    <string name="enterdeliverydate">Masukan tanggal pengantaran</string>
    <string name="enterpickuptime">Masukan waktu penjemputan</string>
    <string name="enterpickupdate">Masukan tanggal penjemputan</string>
    <string name="closeMsg">Apakah anda yakin akan menutup Laundry?</string>
    <string name="logoutMsg">Apakah anda yakin akan keluar?</string>
    <string name="deleteMsg">Apakah anda yakin akan menghapus akun Laundry?</string>
    <string name="Laundary_service">Layanan Laundry</string>
    <string name="Laundary_care_service">Layanan Perawatan Laundary </string>
    <string name="cloth_washing_fold">Pencucian Kain &amp; Lipat</string>
    <string name="thelaundry">Pelayanan Toko Laundry Sedang Penuh</string>
    <string name="hours">24 Jam</string>
    <string name="TopServices">Laundry</string>
    <string name="services">Semua Layanan</string>
    <string name="offer">Penawaran</string>
    <string name="PopularLaundries">Laundry Populer</string>
    <string name="SpecialOffer">Paket Spesial &amp; Penawaran</string>
    <string name="Laundary_near">Laundary Sekitar Anda</string>
    <string name="ViewAll">Lihat Semua</string>
    <string name="Viewdetails">Lihat Detail</string>
    <string name="myorder">Order Saya</string>
    <string name="chat">Obrolan</string>
    <string name="rate_now">Beri ulasan sekarang</string>
    <string name="rate_if">Beri ulasan jika anda menyukai layanan kami</string>
    <string name="clothlist">Daftar Kain</string>
    <string name="entValNumber">Harap Masukkan Nomor Ponsel yang Valid</string>
    <string name="orderdetails">Detail pesanan</string>
    <string name="monday">Senin</string>
    <string name="copied">Kode Promosi Disalin Ke Papan Klip</string>
    <string name="tuesday">Selasa</string>
    <string name="support">Dukung</string>
    <string name="deleteaccount">Hapus akun</string>
    <string name="cancelaccount">Batalkan Akun</string>
    <string name="account">Akun</string>
    <string name="changepassword">Ganti kata sandi</string>
    <string name="orderno">#1245893</string>
    <string name="confirmed">Dikonfirmasi</string>
    <string name="confirm_order">KONFIRMASI PEMESANAN</string>
    <string name="select_address">Pilih Alamat &amp; Lanjutkan</string>
    <string name="select">Pilih</string>
    <string name="go_to_status">Pergi ke Status Pemesanan</string>
    <string name="no_chat_history_found">Tidak Ada Riwayat Obrolan yang Ditemukan</string>
    <string name="pickedup">Dijemput</string>
    <string name="pickupAddress">Alamat Pengambilan</string>
    <string name="shopname">Nama Toko</string>
    <string name="val_comment">Silakan masukkan komentar</string>
    <string name="ordernum">Nomor pesanan.</string>
    <string name="ordercanceled">Sudah Pesanan Dibatalkan</string>
    <string name="final_amount">Estimasi Harga</string>
    <string name="thankfor">Terima kasih telah memilih kami!</string>
    <string name="your_pickup">Pesanan Anda akan kami proses</string>
    <string name="inprocess">Dalam Proses</string>
    <string name="shipped">Dikirim</string>
    <string name="delivered">Terkirim</string>
    <string name="deliveryonly">Pengiriman</string>
    <string name="logout">Keluar</string>
    <string name="price250">$250</string>
    <string name="price10">$10</string>
    <string name="notification">Pemberitahuan</string>
    <string name="solve">memecahkan</string>
    <string name="cod">Lakukan pembayaran ketika pesanan anda telah kami konfirmasi. Cek status pembayaran di Menu Pesanan</string>
    <string name="apply">Menerapkan</string>
    <string name="subtotal">Sub Total</string>
    <string name="tax">Pajak</string>
    <string name="onlywash">Hanya Cuci</string>
    <string name="shirt">x Shirt(Man) </string>
    <string name="payable">Jumlah Hutang</string>
    <string name="paymath">Cara Pembayaran</string>
    <string name="title">Judul</string>
    <string name="total">Total</string>
    <string name="edit">Edit</string>
    <string name="yourcloth">Bajumu</string>
    <string name="addmore">Tambahkan Lebih Banyak</string>
    <string name="preview">Pratinjau Pesanan</string>
    <string name="next">Proses ></string>
    <string name="offers">45% Off Here Is Your Code Berakhir April 01</string>
    <string name="itemsadded">8 Produk ditambahkan</string>
    <string name="itemsadd"> Produk</string>
    <string name="totalprice">Total $75:00</string>
    <string name="no_ticket_found">Tiket Tidak Ditemukan</string>
    <string name="submit">Proses</string>
    <string name="schedule_pickup">JADWALKAN PICKUP</string>
    <string name="address">Alamat</string>
    <string name="openinghours">Jam buka</string>
    <string name="taptoview">Ketuk Untuk Melihat Di Peta</string>
    <string name="aboutus">Tentang kami</string>
    <string name="optionwill">Opsi Akan Segera Tersedia.</string>
    <string name="about">Toko Binatu Adalah Layanan Binatu Koin-OP Layanan Lengkap. Didedikasikan Untuk Secara Konsisten Memberikan Kepuasan Pelanggan Yang Tinggi Dengan Rendring Yang Andal.</string>
    <string name="reviews">(4.5 Ulasan)</string>
    <string name="review">Ulasan)</string>
    <string name="val_description">Silakan Masukkan Deskripsi</string>
    <string name="val_title">Silakan Masukkan Judul.</string>
    <string name="val_payment">Silakan Pilih Metode Pembayaran.</string>
    <string name="val_Address">Silakan Pilih Alamat</string>
    <string name="internet_connection">Harap Aktifkan Koneksi Internet Anda.</string>
    <string name="discription">Deskripsi</string>
    <string name="inprogress">Sedang berlangsung</string>
    <string name="pending">Menunggu</string>
    <string name="addticket">Tambahkan Tiket</string>
    <string name="msgadmin">Pesan Oleh Admin Tim Resolusi Pesan</string>
    <string name="laundryticket">Tiket Laundry:-</string>
    <string name="trackthrough">Lacak Paket Anda Melalui salah satu kurir dan operator kami yang didukung</string>
    <string name="related">Terkait Untuk Mengobrol Dengan</string>
    <string name="services_not">Layanan tidak tersedia</string>
    <string name="Choose">Pilih pakaian anda</string>
    <string name="wash">Dapatkan fasilitas cuci terbaik</string>
    <string name="dummuydata">Pilih pakaian Anda Dengan menggunakan aplikasi ini Anda dapat memilih pakaian Anda untuk cucian dengan cara yang sangat sederhana.</string>
    <string name="dummuydata2">Dapatkan fasilitas pencucian terbaik Dapatkan layanan pencucian terbaik dari toko binatu terdekat dengan biaya yang sangat wajar.</string>
    <string name="dummuydata3">Dunia Laundry memberikan free ongkir untuk setiap delivery pick up laundry untuk semua pelanggan kami berikan special dan tidak ada batasan jumlah yang diangkut.</string>
    <string name="delivery">Free Ongkir &amp; Pengiriman Tepat Waktu</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
    <string name="SchedulePikcup">Jadwal pengiriman</string>
    <string name="AddAddress">Tambah alamat</string>
    <string name="SelectArea">Pilih area</string>
    <string name="CompAddress">Alamat lengkap</string>
    <string name="pinLocation">Tandai lokasi anda</string>
    <string name="Contactnum">Nomor Kontak</string>
    <string name="Home">Beranda</string>
    <string name="areyou">Apakah anda yakin akan membatalkan order ini?</string>
    <string name="paidvia">Total</string>
    <string name="discount">Diskon</string>
    <string name="discount_amount">Jumlah Diskon</string>
    <string name="Work">Bekerja</string>
    <string name="rejected">Tolak</string>
    <string name="update">Perbaharui</string>
    <string name="write_your_message">Tulis pesan</string>
    <string name="Other">Lainnya</string>
    <string name="calldeliveryagent">Telepon agen kami</string>
    <string name="callif">Jika mengalami gangguan silahkan menghubungi agen kami</string>
    <string name="msgagent">Hubungi agen kami </string>
    <string name="msgif">Jika mengalami gangguan silahkan menghubungi agen kami</string>
    <string name="pickupdate">Tanggal &amp; Waktu Penjemputan</string>
    <string name="deliverydate">Delivery Date &amp; Time</string>
    <string name="saveContinue">Simpan dan lanjutkan</string>
    <string name="Wherehouldwedeliver">Kemana kami akan antarkan?"</string>
    <string name="enter_pass">Silahkan masukan kata sandi.</string>
</resources>