<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.AboutFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutus"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ctvAboutUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/about" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mvAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190sdp"
                android:layout_marginTop="@dimen/_5sdp" />


            <TextView
                android:id="@+id/ctvTap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/taptoview" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/openinghours"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ctvOnTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/online_circle"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/taptoview"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/ctvOffTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/online_circle"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/taptoview"
                android:textSize="@dimen/_14sdp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cvSchedule"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_20sdp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/schedule_pickup"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>