<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ctvHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/rate_now"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintBottom_toTopOf="@id/ctvline"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ctvline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/rate_if"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/ctvHead" />

                <RatingBar
                    android:id="@+id/rbReview"
                    style="@style/RatingBarMy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:numStars="5"
                    android:stepSize="1"
                    android:theme="@style/RatingBarMy"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ctvline" />


                <Button
                    android:id="@+id/cbCancelDailog"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/shape_for_gradientround"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/cbCancel"
                    app:layout_constraintTop_toBottomOf="@id/rbReview" />

                <Button
                    android:id="@+id/cbCancel"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/shape_for_rectangleblueround"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/cbCancelDailog"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rbReview" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>