<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_7sdp">

                <LinearLayout
                    android:id="@+id/llName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ctvSerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/cloth_washing_fold"
                            android:textSize="@dimen/_18sdp" />

                        <TextView
                            android:id="@+id/ctvSerDescrition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:maxLines="2"
                            android:text="@string/thelaundry"
                            android:textSize="@dimen/_16sdp" />

                        <LinearLayout
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_9sdp"
                            android:background="@drawable/shape_for_gradient">

                            <TextView
                                android:id="@+id/ctvSerTime"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/_2sdp"
                                android:gravity="center"
                                android:text="@string/hours"
                                android:textAlignment="center"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_16sdp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3">

                        <ImageView
                            android:id="@+id/ivImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/cloth_washing_fold" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
