<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/auth_bg"
            tools:context=".Activity.Login">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="350dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/white_icon" />

                <com.samyotech.laundry.utils.CustomTextViewpoppins_bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/cetName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:drawablePadding="@dimen/_15sdp"
                        android:hint="@string/fname"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_gray" />

                    <EditText
                        android:id="@+id/cetNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:drawablePadding="@dimen/_15sdp"
                        android:hint="@string/pnumber"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_gray" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/cetEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/white"
                            android:drawablePadding="@dimen/_15sdp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/white"
                        android:textColorHint="@color/light_gray" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <EditText
                                android:id="@+id/cetPassword1"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="0.8"
                                android:backgroundTint="@color/white"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_+=-{}|';:?/1234567890"
                                android:gravity="center_vertical"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLength="15"
                                android:paddingLeft="5dp"
                                android:singleLine="true"
                                android:textColor="@color/white"
                        android:textColorHint="@color/light_gray"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/ivOldPass"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                app:tint="@color/white"
                                android:gravity="center_vertical"
                                android:src="@drawable/passwordhide" />


                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <EditText
                                android:id="@+id/cetPassword2"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="0.8"
                                android:backgroundTint="@color/white"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_+=-{}|';:?/1234567890"
                                android:gravity="center_vertical"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLength="15"
                                android:paddingLeft="5dp"
                                android:singleLine="true"
                                android:textColor="@color/white"
                        android:textColorHint="@color/light_gray"
                                android:textSize="16sp" />

                            <ImageView
                                android:id="@+id/ivNewPass"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:gravity="center_vertical"
                                app:tint="@color/white"
                                android:src="@drawable/passwordhide" />


                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/cvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    app:fb_defaultColor="@color/white"
                    app:fb_focusColor="@color/white"
                    app:fb_iconPosition="left"
                    app:fb_radius="30dp"
                    app:fb_text="Register"
                    app:fb_textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.samyotech.laundry.utils.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/already"
                        android:textColor="@color/light_gray"
                        android:textColorHint="@color/light_gray" />

                    <com.samyotech.laundry.utils.CustomTextViewBold
                        android:id="@+id/login_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/loginc"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RRsncbar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </ScrollView>
</layout>